--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "quick-release",
   "version": "0.0.1",
-  "description": "quick releases for your project",
+  "description": "Quickly generate and publish your application releases",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,14 +17,11 @@
     "chalk": "1.1.3",
     "cli-spinner": "0.2.5",
     "dateformat": "1.0.12",
-    "git-raw-commits": "1.1.0",
-    "git-rev": "0.2.1",
     "github": "0.2.4",
     "inquirer": "0.12.0",
-    "is-git-url": "0.2.3",
     "lodash": "4.7.0",
+    "minimist": "1.2.0",
     "parse-github-url": "0.3.0",
-    "remote-origin-url": "0.5.1",
     "semver": "5.1.0",
     "shelljs": "0.6.0",
     "simple-git": "1.31.0"
