--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
   },
   "license": "MIT",
   "dependencies": {
-    "boxen": "0.5.1",
-    "chalk": "1.1.3",
-    "cli-spinner": "0.2.5",
-    "dateformat": "1.0.12",
-    "github": "0.2.4",
-    "inquirer": "0.12.0",
-    "lodash": "4.12.0",
+    "@octokit/rest": "15.2.5",
+    "boxen": "1.3.0",
+    "chalk": "2.3.2",
+    "clear": "^0.1.0",
+    "configstore": "3.1.1",
+    "dateformat": "3.0.3",
+    "inquirer": "5.1.0",
+    "is-online": "^7.0.0",
+    "lodash": "4.17.5",
     "minimist": "1.2.0",
-    "parse-github-url": "0.3.1",
-    "semver": "5.1.0",
-    "shelljs": "0.7.0",
-    "simple-git": "1.32.1"
+    "ora": "2.0.0",
+    "parse-github-url": "1.0.2",
+    "replace-string": "1.1.0",
+    "semver": "5.5.0",
+    "shelljs": "0.8.1",
+    "simple-git": "1.92.0",
+    "touch": "^3.1.0"
   }
 }
