--- a/.editorconfig
+++ b/.editorconfig
@@ -3,13 +3,32 @@
 
 root = true
 
+
+# Unix-style newlines with a newline ending every file
 [*]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+# general config
 indent_style = space
 indent_size = 4
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
+
+
+# HTML-Files
+[*.html]
+indent_style = tab
+indent_size = 2
+
+# JS-Files
+[*.js]
+indent_style = space
+indent_size = 2
+
+[*.{json,yml,yaml,md,sql}]
+indent_size = 2
+indent_style = space
 
 [*.md]
 trim_trailing_whitespace = false
