--- a/package.json
+++ b/package.json
@@ -9,26 +9,22 @@
   "author": "Dmytro Hrynevych",
   "repository": "dmh/quick-release",
   "bin": {
-    "quick-release": "./index.js"
+    "rrr": "./index.js"
   },
   "license": "MIT",
   "dependencies": {
-    "@octokit/rest": "15.2.5",
+    "@octokit/rest": "15.2.6",
     "boxen": "1.3.0",
     "chalk": "2.3.2",
-    "clear": "0.1.0",
-    "configstore": "3.1.1",
     "dateformat": "3.0.3",
-    "inquirer": "5.1.0",
+    "inquirer": "5.2.0",
     "is-online": "7.0.0",
     "lodash": "4.17.5",
-    "minimist": "1.2.0",
+    "mri": "1.1.0",
     "ora": "2.0.0",
-    "parse-github-url": "1.0.2",
-    "replace-string": "1.1.0",
-    "semver": "5.5.0",
-    "shelljs": "0.8.1",
-    "simple-git": "1.92.0",
-    "touch": "3.1.0"
+    "semver": "5.5.0"
+  },
+  "devDependencies": {
+    "standard": "11.0.1"
   }
 }
