--- a/package.json
+++ b/package.json
@@ -2,27 +2,45 @@
   "name": "quick-release",
   "version": "0.1.0",
   "description": "Quickly generate and publish your application releases",
+  "license": "MIT",
+  "author": "Dmytro Hrynevych",
+  "repository": "dmh/quick-release",
   "main": "index.js",
+  "bin": {
+    "quick-release": "./index.js"
+  },
+  "keywords": [
+    "quick-release",
+    "release",
+    "publish",
+    "github",
+    "git",
+    "changelog",
+    "semver",
+    "versioning",
+    "semantic",
+    "automatization",
+    "terminal",
+    "console",
+    "cli",
+    "shell",
+    "command-line"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Dmytro Hrynevych",
-  "repository": "dmh/quick-release",
-  "bin": {
-    "rrr": "./index.js"
-  },
-  "license": "MIT",
   "dependencies": {
     "@octokit/rest": "15.2.6",
     "boxen": "1.3.0",
-    "chalk": "2.3.2",
+    "chalk": "2.4.0",
     "dateformat": "3.0.3",
     "inquirer": "5.2.0",
     "is-online": "7.0.0",
     "lodash": "4.17.5",
     "mri": "1.1.0",
     "ora": "2.0.0",
-    "semver": "5.5.0"
+    "semver": "5.5.0",
+    "validate-npm-package-name": "3.0.0"
   },
   "devDependencies": {
     "standard": "11.0.1"
