[TASK] update .qrconfig

--- a/.qrconfig
+++ b/.qrconfig
@@ -1,5 +1,5 @@
 {
-  "labels": ["[WIP]", "[TASK]"],
+  "labels": ["[FEATURE]", "[DOC]", "[TEST]", "[UPDATE]", "[BUGFIX]", "[TASK]"],
   "changelogFile": "CHANGELOG.md",
   "breakingChangesTitle": ":heavy_exclamation_mark:**Breaking Changes:**"
 }
