--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,34 @@
+# This file is for unifying the coding style for different editors and IDEs
+# editorconfig.org
+
 root = true
 
 [*]
 charset = utf-8
-end_of_line = lf
-indent_size = 2
-indent_style = space
-insert_final_newline = true
+# Get rid of whitespace to avoid diffs with a bunch of EOL changes
 trim_trailing_whitespace = true
+# Unix-style newlines with a newline ending every file
+end_of_line = lf
+insert_final_newline = true
+indent_style = space
+indent_size = 4
 
-[*.md]
-trim_trailing_whitespace = false
+# TypeScript/JavaScript/JSON files
+[*.{ts,js,json,mjs}]
+indent_size = 2
+
+# XLF/XML files
+[*.{xlf,xml}]
+indent_style = tab
+
+# YAML-Files
+[*.{yaml,yml}]
+indent_size = 2
+
+# HTML files
+[*.html]
+indent_size = 2
+
+# CSS/SCSS files
+[*.{css,scss}]
+indent_size = 2
