--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
+.vscode/*
+!.vscode/settings.json
 node_modules
-site
+.env
+.env*
 .tmp
 temp
-.sass-cache
-bower_components
 .DS_Store
 npm-debug.log
 *.sublime-*
