--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
-  "name": "quick-release",
+  "name": "qr",
   "version": "2.1.0",
   "description": "Quickly generate and publish your application releases",
   "license": "MIT",
-  "author": "Dmytro Hrynevych",
-  "repository": "dmh/quick-release",
+  "author": "dmh",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dmh/quick-release.git"
+  },
   "main": "index.js",
   "bin": {
-    "quick-release": "./index.js"
+    "qr": "./bin/qr-cli.js"
+  },
+  "homepage": "",
+  "bugs": {
+    "url": "https://github.com/dmh/quick-release/issues"
   },
   "keywords": [
     "quick-release",
@@ -26,23 +33,48 @@
     "shell",
     "command-line"
   ],
+  "files": [
+    "bin/",
+    "lib/"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "husky install",
+    "lint-js": "standard -v 'lib/**/*.js' 'bin/**/*.js' 'test/**/*.js'",
+    "check-js": "tsc -p jsconfig.json --maxNodeModuleJsDepth 0",
+    "test": "npm run lint-js && npm run check-js",
+    "docs": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
-    "@octokit/rest": "15.2.6",
-    "boxen": "1.3.0",
-    "chalk": "2.4.0",
-    "dateformat": "3.0.3",
-    "inquirer": "5.2.0",
-    "is-online": "7.0.0",
-    "lodash": "4.17.5",
-    "mri": "1.1.0",
-    "ora": "2.0.0",
-    "semver": "5.5.0",
-    "validate-npm-package-name": "3.0.0"
+    "@inquirer/prompts": "^2.1.1",
+    "@types/node": "20.3.0",
+    "arg": "5.0.2",
+    "chalk": "5.2.0",
+    "cli-table3": "0.6.3",
+    "cpy": "10.1.0",
+    "del": "7.0.0",
+    "dotenv": "16.1.4",
+    "execa": "7.1.1",
+    "git-url-parse": "13.1.0",
+    "globby": "13.1.4",
+    "is-online": "10.0.0",
+    "minimist": "^1.2.8",
+    "ora": "6.3.1",
+    "p-filter": "^3.0.0",
+    "parse-json": "^7.0.0",
+    "prompts": "2.4.2",
+    "semver": "7.5.1",
+    "simple-git": "3.19.0"
   },
   "devDependencies": {
-    "standard": "11.0.1"
-  }
+    "@types/prompts": "2.4.4",
+    "@types/semver": "7.5.0",
+    "husky": "8.0.3",
+    "standard": "17.1.0",
+    "typescript": "5.1.3"
+  },
+  "engines": {
+    "node": ">=18.16",
+    "npm": ">=9.5.1"
+  },
+  "type": "module"
 }
