--- a/package.json
+++ b/package.json
@@ -45,32 +45,28 @@
     "docs": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
-    "@inquirer/prompts": "^2.1.1",
-    "@types/node": "20.3.0",
-    "arg": "5.0.2",
+    "@inquirer/prompts": "2.1.1",
     "chalk": "5.2.0",
-    "cli-table3": "0.6.3",
-    "cpy": "10.1.0",
-    "del": "7.0.0",
-    "dotenv": "16.1.4",
+
+
+
+    "dotenv": "16.3.1",
     "execa": "7.1.1",
     "git-url-parse": "13.1.0",
-    "globby": "13.1.4",
     "is-online": "10.0.0",
-    "minimist": "^1.2.8",
+    "jsdoc": "4.0.2",
+    "minimist": "1.2.8",
+    "modern-jsdoc-template": "1.0.0",
     "ora": "6.3.1",
-    "p-filter": "^3.0.0",
-    "parse-json": "^7.0.0",
-    "prompts": "2.4.2",
-    "semver": "7.5.1",
-    "simple-git": "3.19.0"
+
+    "semver": "7.5.2"
   },
   "devDependencies": {
-    "@types/prompts": "2.4.4",
-    "@types/semver": "7.5.0",
-    "husky": "8.0.3",
-    "standard": "17.1.0",
-    "typescript": "5.1.3"
+    "@types/node": "~20.3.1",
+    "@types/semver": "~7.5.0",
+    "husky": "~8.0.3",
+    "standard": "~17.1.0",
+    "typescript": "~5.1.3"
   },
   "engines": {
     "node": ">=18.16",
