[TASK] add subpath mapped imports, update npm deps

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,7 +6,11 @@
     "checkJs": true,
     "forceConsistentCasingInFileNames": true,
     "useUnknownInCatchVariables": false,
-    "moduleResolution": "node"
+    "moduleResolution": "nodenext",
+    "baseUrl": "./",
+    "paths": {
+        "#*": ["./lib/lib/*"]
+    }
   },
   "include": ["lib/**/*", "bin/**/*", "test/**/*"],
 }
