--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "test": "npm run lint-js && npm run check-js",
     "docs": "jsdoc -c jsdoc.json"
   },
+  "imports": {
+    "#*": "./lib/lib/*"
+  },
   "dependencies": {
-    "@inquirer/prompts": "2.1.1",
+    "@inquirer/prompts": "2.2.0",
     "chalk": "5.2.0",
-
-
-
     "dotenv": "16.3.1",
+    "editorconfig": "1.0.3",
     "execa": "7.1.1",
     "git-url-parse": "13.1.0",
     "is-online": "10.0.0",
@@ -58,8 +59,7 @@
     "minimist": "1.2.8",
     "modern-jsdoc-template": "1.0.0",
     "ora": "6.3.1",
-
-    "semver": "7.5.2"
+    "semver": "7.5.3"
   },
   "devDependencies": {
     "@types/node": "~20.3.1",
