--- a/quickrelease.json
+++ b/quickrelease.json
@@ -1,7 +1,8 @@
 {
   "quick-release": "https://www.npmjs.com/package/quick-release",
   "changelog": {
-    "labels": ["[FEATURE]","[TASK]","[BUGFIX]","[DOC]","[TEST]"],
+    "labels": ["[FEATURE]","[BUGFIX]","[TASK]","[DOC]","[TEST]"],
     "breakingLabel": "[!!!]"
-  }
+  },
+  "githubReleaseTitles": ["Features", "Bugfixes", "General", "Documentation", "Test"]
 }
