[TASK] add checkIfCommitHasTag check, update npm dep-s, use @octokit/request instead of @octokit/core, update parse fn-s, general refactor

--- a/quickrelease.json
+++ b/quickrelease.json
@@ -4,5 +4,5 @@
     "labels": ["[FEATURE]","[BUGFIX]","[TASK]","[DOC]","[TEST]"],
     "breakingLabel": "[!!!]"
   },
-  "githubReleaseTitles": ["Features", "Bugfixes", "General", "Documentation", "Test"]
+  "githubReleaseTitles": ["New Features", "Bugfixes", "General", "Documentation", "Tests"]
 }
