--- a/jsconfig.json
+++ b/jsconfig.json
@@ -12,5 +12,5 @@
         "#*": ["./lib/lib/*"]
     }
   },
-  "include": ["lib/**/*", "bin/**/*", "test/**/*"],
+  "include": ["lib/**/*", "bin/**/*"],
 }
