--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
   },
   "dependencies": {
     "@inquirer/prompts": "2.2.0",
-    "@octokit/core": "4.2.4",
-    "chalk": "5.2.0",
+    "@octokit/request": "7.0.1",
+    "chalk": "5.3.0",
     "dotenv": "16.3.1",
     "editorconfig": "1.0.3",
     "execa": "7.1.1",
@@ -63,11 +63,11 @@
     "semver": "7.5.3"
   },
   "devDependencies": {
-    "@types/node": "~20.3.1",
+    "@types/node": "~20.3.3",
     "@types/semver": "~7.5.0",
     "husky": "~8.0.3",
     "standard": "~17.1.0",
-    "typescript": "~5.1.3"
+    "typescript": "~5.1.6"
   },
   "engines": {
     "node": ">=18.16",
