[TASK] change lib folder structure, remove old files, use ES6 modules

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,7 @@
     "moduleResolution": "nodenext",
     "baseUrl": "./",
     "paths": {
-        "#*": ["./lib/lib/*"]
+        "#*": ["./lib/*"]
     }
   },
   "include": ["lib/**/*", "bin/**/*"],
