--- a/.github/workflows/git-commit.yml
+++ b/.github/workflows/git-commit.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Check Commit Type
         uses: gsactions/commit-message-checker@v1
         with:
-          pattern: '^(|\[(!!!)\])\[(FEATURE|BUGFIX|TASK|TEST|DOC|WIP)\] .+$'
+          pattern: '^\[(!!!|FEATURE|BUGFIX|TASK|TEST|DOC)\].+$'
           flags: 'gm'
-          error: 'Your first line has to contain a commit prefix like "[FEATURE|BUGFIX|TASK|TEST|DOC|WIP]".'
+          error: 'Your first line has to contain a commit prefix like "[!!!|FEATURE|BUGFIX|TASK|TEST|DOC]".'
